RESOLVED FIXED131195
AX: iOS does not need to spin the run loop on synchronous message calls
https://bugs.webkit.org/show_bug.cgi?id=131195
Summary AX: iOS does not need to spin the run loop on synchronous message calls
chris fleizach
Reported 2014-04-03 17:13:53 PDT
On the Mac platform, we need to spin the run loop while making synchronous calls to avoid VoiceOver hanging. On iOS, this not needed due to architectural differences
Attachments
patch (7.35 KB, patch)
2014-04-03 17:37 PDT, chris fleizach
no flags
patch (6.44 KB, patch)
2014-04-03 17:54 PDT, chris fleizach
mitz: review+
Radar WebKit Bug Importer
Comment 1 2014-04-03 17:14:08 PDT
chris fleizach
Comment 2 2014-04-03 17:14:41 PDT
Radar WebKit Bug Importer
Comment 3 2014-04-03 17:15:05 PDT
chris fleizach
Comment 4 2014-04-03 17:37:20 PDT
chris fleizach
Comment 5 2014-04-03 17:54:23 PDT
chris fleizach
Comment 6 2014-04-03 23:53:15 PDT
Note You need to log in before you can comment on or make changes to this bug.